--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "twi.h": "c",
         "gpio.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "pgmspace.h": "c"
     }
 }
